amount button works a lil

--- a/shop.html
+++ b/shop.html
@@ -53,6 +53,10 @@
             <div id="cart-items">
                 <!-- empty cart -->
             </div>
+            <div id="amount" class="cart-total">
+                <strong class="cart-total-title">Amount</strong>
+                <span id="qttynum" class="cart-total-price h4">0</span>
+            </div>
             <div id="total" class="cart-total">
                 <strong class="cart-total-title">Total</strong>
                 <span id="price" class="cart-total-price h4">€0.00</span>
