--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping Cart - JS</title>
+    <title>Flowers Shop</title>
+    <link rel="shortcut icon" href="https://cdn.imgbin.com/11/15/17/imgbin-flower-euclidean-logo-flowers-flowers-logo-material-kSMx0cB6bCa627ez58XXajR02.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -40,15 +41,15 @@
 
     <!-- here ends navbar -->
     <div class="container">
-        <h2 class="text-center w-100 my-5 mx-1 p-3 h1">Our best bouquets</h2>
+        <h2 class="text-center bg-light border rounded w-100 my-5 mx-1 p-3 h1">Our best bouquets</h2>
         <div class="products row"></div>
 
         <!--cart starts here  -->
         <div id="cart" class="mt-5">
             <div class="cart-header h4  border-bottom row">
-                <span class="cart-item col-6 mb-3 ">ITEM</span>
-                <span class="cart-price col-3 mb-3">PRICE</span>
-                <span class="col-3 mb-3">QUANTITY</span>
+                <span class="cart-item col-6 mb-3 ">Item</span>
+                <span class="cart-price col-3 mb-3">Price</span>
+                <span class="col-3 mb-3">Quantity</span>
             </div>
             <div id="cart-items">
                 <!-- empty cart -->
@@ -57,13 +58,16 @@
                 <strong class="cart-total-title">Amount</strong>
                 <span id="qttynum" class="cart-total-price h4">0</span>
             </div>
+            <div id="discount" class="cart-total">
+                <strong class="cart-total-title">Discount -10% (for the purchase >100€)</strong>
+                <span id="qttynum" class="cart-total-price h4">0</span>
+            </div>
             <div id="total" class="cart-total">
                 <strong class="cart-total-title">Total</strong>
                 <span id="price" class="cart-total-price h4">€0.00</span>
             </div>
             <div class="d-flex justify-content-center m-4">
-                <button id="btn-purchase" class="btn btn-primary btn-purchase" type="button">Check out <br><i
-                        class="fa fa-handshake-o" style="font-size:36px;color:white"></i></button>
+                <button id="btn-purchase" class="btn btn-primary btn-purchase" type="button">Buy now</button>
             </div>
         </div>
     </div>
