--- a/shop.html
+++ b/shop.html
@@ -58,9 +58,9 @@
                 <strong class="cart-total-title">Amount</strong>
                 <span id="qttynum" class="cart-total-price h4">0</span>
             </div>
-            <div id="discount" class="cart-total">
+            <div id="minusprice" class="cart-total">
                 <strong class="cart-total-title">Discount -10% (for the purchase >100€)</strong>
-                <span id="qttynum" class="cart-total-price h4">0</span>
+                <span id="discount" class="cart-total-price h4">0</span>
             </div>
             <div id="total" class="cart-total">
                 <strong class="cart-total-title">Total</strong>
